# qqbot-desktop-launcher

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  notifications.json  pyproject.toml  start-desktop.ps1
.github/workflows/: verify.yml
admin/: README.md  server.py  start-admin.ps1
admin/backend/: __init__.py  config.py  main.py  requirements.txt
admin/backend/adapter/: __init__.py  napcat.py  onebot.py  process.py
admin/backend/api/: contracts.py  routes.py
admin/backend/database/: __init__.py  migrations.py  repository.py  stats_repository.py
admin/backend/domain/: __init__.py  errors.py  models.py
admin/backend/event/: __init__.py  bus.py
admin/backend/manager/: __init__.py  bot_manager.py
admin/backend/plugin/: __init__.py  registry.py
admin/backend/runtime_compat/: sitecustomize.py
admin/backend/security/: __init__.py  secrets.py  session.py
admin/backend/service/: bot_service.py  diagnostics.py  resource_setup.py
admin/backend/websocket/: __init__.py  routes.py
admin/desktop/: README.md  main.cjs  package-lock.json  package.json  preload.cjs
admin/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
admin/frontend/src/: layout.css  main.jsx  styles.css
admin/frontend/src/lib/: api.js  bot.js  logs.js  stats.js
admin/frontend/src/theme-packages/: blue.css  blue.js  index.js
scripts/: build-backend.ps1  verify.ps1
tests/: test_access_control_service.py  test_auto_learn_storage.py  test_group_chat_profiles.py  test_group_chat_rules.py  test_stats_repository.py
