[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "qqbot-desktop-launcher"
version = "0.1.0"
description = "Local QQ Bot desktop control panel"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.19,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["admin"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 140
exclude = [".venv", "data", "program", "release", "admin/frontend", "admin/desktop"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
mypy_path = "admin"
files = ["admin/backend/domain", "admin/backend/security", "admin/backend/database/migrations.py"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

